// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownMenu to match snapshot [full props] 1`] = `
<DocumentFragment>
  <div
    class="test dropdown"
  >
    <span
      aria-expanded="false"
      aria-haspopup="true"
      class="dropdown-toggle"
      data-toggle="dropdown"
      role="button"
    >
      <i
        aria-hidden="true"
      >
        <svg
          class="d-block"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 448 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
          />
        </svg>
      </i>
    </span>
    <div
      aria-hidden="true"
      class="dropdown-menu dropdown-menu-right"
      role="menu"
      tabindex="-1"
    >
      <a
        href="#"
      >
        Item
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropdownMenu to match snapshot 1`] = `
<DocumentFragment>
  <div
    class="dropdown"
  >
    <span
      aria-expanded="false"
      aria-haspopup="true"
      class="dropdown-toggle"
      data-toggle="dropdown"
      role="button"
    >
      <i
        aria-hidden="true"
      >
        <svg
          class="d-block"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M328 256c0 39.8-32.2 72-72 72s-72-32.2-72-72 32.2-72 72-72 72 32.2 72 72zm104-72c-39.8 0-72 32.2-72 72s32.2 72 72 72 72-32.2 72-72-32.2-72-72-72zm-352 0c-39.8 0-72 32.2-72 72s32.2 72 72 72 72-32.2 72-72-32.2-72-72-72z"
          />
        </svg>
      </i>
    </span>
    <div
      aria-hidden="true"
      class="dropdown-menu"
      role="menu"
      tabindex="-1"
    />
  </div>
</DocumentFragment>
`;
